--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <script src="ball.js"></script>
       <script src="bin.js"></script>
       <script src="p5.play.js"></script>
-
+      <script src="paper.png"></script>
       <script src="sketch.js"></script>
 
     </head>
